deploy/k8s/apps/cv-generator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-generator
  namespace: cvgen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-generator
  template:
    metadata:
      labels:
        app: cv-generator
    spec:
      containers:
        - name: cv-generator
          image: ghcr.io/corruptmane/cvgen-cv-generator
          ports:
            - name: ops
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /healthz
              port: ops
          readinessProbe:
            httpGet:
              path: /readyz
              port: ops
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
